--- a/spec/fixtures/projects.yml
+++ b/spec/fixtures/projects.yml
@@ -1,7 +1,5 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-one:
-  name: MyString
-
-two:
-  name: MyString
+gnat:
+  id: 1
+  name: gnat
+  key: gnat
+  description: Simple bug-tracking system
